[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netconkit"
version = "0.1.0"
description = "Mini network recon toolkit (informational only)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "You" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "psutil>=5.9.0",
]

[project.scripts]
netconkit = "netconkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/netconkit"]
